--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-popover": "1.0.6",
     "@radix-ui/react-tabs": "^1.0.4",
+    "@rainbow-me/rainbowkit": "^1.0.8",
     "@reduxjs/toolkit": "^1.9.5",
     "@sindresorhus/class-names": "^2.0.0",
     "@styled-icons/bootstrap": "^10.47.0",
@@ -21,6 +22,10 @@
     "@types/node": "^16.18.38",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
+    "@wagmi/core": "^1.3.9",
+    "@web3modal/ethereum": "^2.7.1",
+    "@web3modal/html": "^2.7.1",
+    "@web3modal/react": "^2.7.1",
     "ethers": "v5",
     "postcss": "^8.4.26",
     "react": "^18.2.0",
@@ -32,6 +37,8 @@
     "styled-components": "^6.0.4",
     "tailwindcss": "^3.3.3",
     "typescript": "^4.9.5",
+    "viem": "^1.6.0",
+    "wagmi": "^1.3.10",
     "web-vitals": "^2.1.4",
     "web3": "^4.0.3"
   },
