--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/node": "^16.18.38",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
+    "@types/uuid": "^9.0.2",
     "@wagmi/core": "^1.3.9",
     "@web3modal/ethereum": "^2.7.1",
     "@web3modal/html": "^2.7.1",
