--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@styled-icons/boxicons-solid": "^10.47.0",
     "@styled-icons/evaicons-outline": "^10.46.0",
     "@styled-icons/evaicons-solid": "^10.46.0",
+    "@styled-icons/material-outlined": "^10.47.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -27,10 +28,13 @@
     "@web3modal/ethereum": "^2.7.1",
     "@web3modal/html": "^2.7.1",
     "@web3modal/react": "^2.7.1",
+    "axios": "^1.4.0",
     "ethers": "v5",
+    "joi": "^17.9.2",
     "postcss": "^8.4.26",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
