--- a/package.json
+++ b/package.json
@@ -44,10 +44,27 @@
     "styled-components": "^6.0.4",
     "tailwindcss": "^3.3.3",
     "typescript": "^4.9.5",
+    "uuid": "^9.0.0",
     "viem": "^1.6.0",
     "wagmi": "^1.3.10",
     "web-vitals": "^2.1.4",
-    "web3": "^4.0.3"
+    "web3": "^4.0.3",
+    "web3-core": "4.0.3",
+    "web3-errors": "1.0.2",
+    "web3-eth": "4.0.3",
+    "web3-eth-abi": "4.0.3",
+    "web3-eth-accounts": "4.0.3",
+    "web3-eth-contract": "4.0.3",
+    "web3-eth-ens": "4.0.3",
+    "web3-eth-iban": "4.0.3",
+    "web3-eth-personal": "4.0.3",
+    "web3-net": "4.0.3",
+    "web3-providers-http": "4.0.3",
+    "web3-providers-ws": "4.0.3",
+    "web3-rpc-methods": "1.0.2",
+    "web3-types": "1.0.2",
+    "web3-utils": "4.0.3",
+    "web3-validator": "1.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
