--- a/.env.staging
+++ b/.env.staging
@@ -1,4 +1,4 @@
-REACT_APP_RPC_HTTP="https://eth-goerli.g.alchemy.com/v2/q8-RFSQGe7oS0pqIM4gX6DzSE061d4xx"
-REACT_APP_ALCHEMY_KEY="q8-RFSQGe7oS0pqIM4gX6DzSE061d4xx"
-REACT_APP_NFT_CONTRACT_ADDRESS="0xFDD8077253237cAdEd0FE662e6755F26886b3CC0"
-REACT_APP_WALLET_CONNECT_PROJECT_ID="5c3c592099824265bb6d21412fed3986"
+VITE_RPC_HTTP="https://eth-goerli.g.alchemy.com/v2/q8-RFSQGe7oS0pqIM4gX6DzSE061d4xx"
+VITE_ALCHEMY_KEY="q8-RFSQGe7oS0pqIM4gX6DzSE061d4xx"
+VITE_NFT_CONTRACT_ADDRESS="0xFDD8077253237cAdEd0FE662e6755F26886b3CC0"
+VITE_WALLET_CONNECT_PROJECT_ID="5c3c592099824265bb6d21412fed3986"
