--- a/.github/workflows/client.yml
+++ b/.github/workflows/client.yml
@@ -59,4 +59,4 @@ jobs:
           pnpm run build:staging
 
       - name: Push website to S3
-        run: aws s3 cp build/ s3://staging-11e08a6f.balue.xyz/ --acl public-read --recursive
+        run: aws s3 cp dist/ s3://staging-11e08a6f.balue.xyz/ --acl public-read --recursive
