--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "balue-client",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "dependencies": {
     "@metamask/detect-provider": "^2.0.0",
     "@radix-ui/react-dialog": "^1.0.4",
@@ -24,6 +25,10 @@
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@types/uuid": "^9.0.2",
+    "@typescript-eslint/eslint-plugin": "^6.4.0",
+    "@typescript-eslint/parser": "^6.4.0",
+    "@vitejs/plugin-react": "^4.0.4",
+    "@vitejs/plugin-react-swc": "^3.3.2",
     "@wagmi/core": "^1.3.9",
     "@web3modal/ethereum": "^2.7.1",
     "@web3modal/html": "^2.7.1",
@@ -31,6 +36,9 @@
     "axios": "^1.4.0",
     "dotenv": "^16.3.1",
     "dotenv-cli": "^7.3.0",
+    "eslint": "^8.47.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.3",
     "ethers": "v5",
     "joi": "^17.9.2",
     "postcss": "^8.4.26",
@@ -41,11 +49,14 @@
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
     "sass": "^1.63.6",
+    "stream-browserify": "^3.0.0",
     "styled-components": "^6.0.4",
     "tailwindcss": "^3.3.3",
     "typescript": "^4.9.5",
     "uuid": "^9.0.0",
-    "viem": "^1.6.0",
+    "vite": "^4.4.9",
+    "vite-plugin-svgr": "^3.2.0",
+    "vite-tsconfig-paths": "^4.2.0",
     "wagmi": "^1.3.10",
     "web-vitals": "^2.1.4",
     "web3": "^4.0.3",
@@ -67,12 +78,12 @@
     "web3-validator": "1.0.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
+    "start": "vite",
+    "build": "vite build",
     "build:staging": "dotenv -e .env.staging pnpm build",
-    "build:production": "dotenv -e .env.production pnpm build"
+    "build:production": "dotenv -e .env.production pnpm build",
+    "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview"
   },
   "eslintConfig": {
     "extends": [
