--- a/package.json
+++ b/package.json
@@ -3,6 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "type": "module",
+  "scripts": {
+    "start": "vite --port 8080",
+    "build": "vite build",
+    "build:staging": "dotenv -e .env.staging pnpm build",
+    "build:production": "dotenv -e .env.production pnpm build",
+    "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview"
+  },
   "dependencies": {
     "@dicebear/avatars": "^4.10.8",
     "@dicebear/avatars-gridy-sprites": "^4.10.8",
@@ -23,6 +31,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@trivago/prettier-plugin-sort-imports": "^4.2.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.38",
     "@types/react": "^18.2.15",
@@ -46,6 +55,8 @@
     "ethers": "v5",
     "joi": "^17.9.2",
     "postcss": "^8.4.26",
+    "prettier": "^3.0.2",
+    "prettier-plugin-organize-imports": "^3.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
@@ -57,6 +68,7 @@
     "styled-components": "^6.0.4",
     "tailwindcss": "^3.3.3",
     "typescript": "^4.9.5",
+    "usehooks-ts": "^2.9.1",
     "uuid": "^9.0.0",
     "vite": "^4.4.9",
     "vite-plugin-svgr": "^3.2.0",
@@ -80,14 +92,6 @@
     "web3-types": "1.0.2",
     "web3-utils": "4.0.3",
     "web3-validator": "1.0.2"
-  },
-  "scripts": {
-    "start": "vite --port 8080",
-    "build": "vite build",
-    "build:staging": "dotenv -e .env.staging pnpm build",
-    "build:production": "dotenv -e .env.production pnpm build",
-    "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
   },
   "eslintConfig": {
     "extends": [
