--- a/.env.staging
+++ b/.env.staging
@@ -1,5 +1,6 @@
-VITE_RPC_HTTP="https://eth-goerli.g.alchemy.com/v2/q8-RFSQGe7oS0pqIM4gX6DzSE061d4xx"
+VITE_RPC_HTTP="https://json-rpc.evm.testnet.shimmer.network"
 VITE_ALCHEMY_KEY="q8-RFSQGe7oS0pqIM4gX6DzSE061d4xx"
-VITE_NFT_CONTRACT_ADDRESS="0xFDD8077253237cAdEd0FE662e6755F26886b3CC0"
+VITE_NFT_CONTRACT_ADDRESS="0xbaB32969C57aED080CA56749184Df04dCB6c2F40"
 VITE_WALLET_CONNECT_PROJECT_ID="5c3c592099824265bb6d21412fed3986"
-VITE_EXPLORER_URL="https://goerli.etherscan.io/tx"
+VITE_EXPLORER_URL="https://explorer.evm.testnet.shimmer.network/tx"
+VITE_API_URL="https://staging-shimmer-api.balue.xyz"
